--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   --line:#18233a; --ink:#e6ecff; --muted:#95a7cf;
   --accent:#11b1ff; --accent2:#6ee7ff; --success:#24ff90;
 
-  /* splash controls (JS updates) */
-  --logo-bright:0;  /* 0..1 */
-  --logo-glow:0;    /* 0..1 */
-  --logo-scale:1;   /* pulsing scale */
+  /* Splash controls (JS updates) */
+  --logo-bright:0;   /* 0..1 */
+  --logo-glow:0;     /* 0..1 */
+  --logo-scale:1;    /* scale pulse */
 }
 *{box-sizing:border-box;margin:0;padding:0}
 html,body{height:100%}
@@ -27,9 +27,9 @@ body{
   overflow-x:hidden;
 }
 
-/* Deep gradient + faint grain (prevents banding) */
+/* Deep backdrop + grain (no banding) */
 .bg{
-  position:fixed; inset:-15% -15% -15% -15%; z-index:-3; pointer-events:none;
+  position:fixed; inset:-15% -15% -15% -15%; z-index:-2; pointer-events:none;
   background:
     radial-gradient(1400px 900px at 12% -8%, rgba(16,30,60,.72) 0%, rgba(9,14,26,.55) 45%, rgba(7,10,18,0) 80%),
     radial-gradient(1100px 800px at 80% 10%, rgba(20,55,90,.55) 0%, rgba(10,18,36,.35) 50%, rgba(7,10,18,0) 85%),
@@ -38,7 +38,7 @@ body{
   filter:saturate(1.05);
 }
 .grain{
-  position:fixed; inset:0; z-index:-2; pointer-events:none; opacity:.22; mix-blend-mode:overlay;
+  position:fixed; inset:0; z-index:-1; pointer-events:none; opacity:.2; mix-blend-mode:overlay;
   background-image:
     radial-gradient(1px 1px at 15% 12%, rgba(255,255,255,.035) 0, transparent 55%),
     radial-gradient(1px 1px at 35% 78%, rgba(255,255,255,.03) 0, transparent 55%),
@@ -47,64 +47,36 @@ body{
     radial-gradient(1px 1px at 52% 52%, rgba(0,0,0,.035) 0, transparent 55%);
 }
 
-/* ===== VEIL (rectangles visible immediately) ===== */
-.veil{position:fixed; inset:0; z-index:30; pointer-events:none;
-  display:grid; grid-template-columns:repeat(22,1fr); grid-template-rows:repeat(12,1fr); perspective:900px}
-.tile{
-  background:linear-gradient(180deg, rgba(18,26,44,.94), rgba(12,18,34,.90));
-  border:1px solid rgba(120,170,240,.06);
-  transform:translateZ(0); will-change:transform,opacity;
+/* ===== CLEAN SPLASH (no rectangles) ===== */
+.splash{
+  position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
+  opacity:1; visibility:visible; transition:opacity .6s ease, visibility .6s ease;
 }
-.veil.shimmer .tile{position:relative; overflow:hidden}
-.veil.shimmer .tile::after{
-  content:""; position:absolute; inset:-120% -40% auto -40%; height:180%;
-  background:linear-gradient(120deg, transparent, rgba(255,255,255,.05), transparent);
-  transform:translateX(-60%) rotate(12deg); animation:sh 9s linear infinite;
-}
-@keyframes sh{to{transform:translateX(120%) rotate(12deg)}}
-/* flip cascade on approval */
-.tile.flip{
-  transform-origin:50% 50% -5px; transform:rotateY(88deg) translateZ(40px) scale(.92);
-  opacity:0; transition:transform .7s cubic-bezier(.2,.8,.2,1), opacity .55s ease;
-  transition-delay:var(--d,0ms);
-}
-
-/* ===== SPLASH ===== */
-.splash{position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
-  opacity:1; visibility:visible; transition:opacity .6s ease, visibility .6s ease}
 .splash.is-fade{opacity:0} .splash.is-hide{opacity:0; visibility:hidden}
-.stage{display:grid; place-items:center; gap:14px}
+.stage{display:grid; place-items:center; gap:16px}
 
-/* Pulsing logo shape + thin static outline (no spinner, no rectangle) */
-.logo-stack{position:relative; display:grid; place-items:center}
-.logo-shape{
-  width:min(50vw,380px); height:min(50vw,380px);
-  transform:scale(var(--logo-scale));
-  -webkit-mask:url("assets/logo.png") center/contain no-repeat;
-          mask:url("assets/logo.png") center/contain no-repeat;
-  background:
-    radial-gradient(96% 96% at 50% 50%, rgba(17,177,255, calc(.82*var(--logo-bright))), rgba(17,177,255,0) 70%),
-    linear-gradient(180deg, rgba(170,255,255, calc(1.15*var(--logo-bright))), rgba(0,120,220, var(--logo-bright)));
+/* Always-visible logo image with neon pulse & brighter outline at approval */
+.slogo{
+  width:min(54vw,380px); height:auto; transform:scale(var(--logo-scale));
   filter:
-    brightness(calc(.66 + .9*var(--logo-bright)))
-    contrast(calc(1 + .28*var(--logo-bright)))
-    saturate(calc(1 + .28*var(--logo-bright)))
-    drop-shadow(0 0 calc(66px*var(--logo-glow)) rgba(17,177,255,.9));
-  animation:pulse 3.4s ease-in-out infinite;
+    brightness(calc(.7 + .9*var(--logo-bright)))
+    contrast(calc(1 + .3*var(--logo-bright)))
+    saturate(calc(1 + .3*var(--logo-bright)))
+    drop-shadow(0 0 calc(60px*var(--logo-glow)) rgba(17,177,255,.9));
+  animation:pulse 3.6s ease-in-out infinite;
 }
-@keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.015)}}
-/* thin outline glow following the logo shape */
-.logo-outline{
-  position:absolute; inset:0; pointer-events:none; opacity:.9;
-  -webkit-mask:url("assets/logo.png") center/contain no-repeat;
-          mask:url("assets/logo.png") center/contain no-repeat;
-  background:
-    radial-gradient(closest-side, rgba(180,255,255,.0) 78%, rgba(150,240,255,.85) 82%, rgba(150,240,255,0) 84%),
-    radial-gradient(closest-side, rgba(0,0,0,0) 86%, rgba(17,177,255,.35) 88%, rgba(17,177,255,0) 91%);
-  filter:blur(.7px) drop-shadow(0 0 18px rgba(17,177,255,.55));
+/* thin outline around any image (no mask required) */
+.slogo-wrap{position:relative; display:inline-grid; place-items:center}
+.slogo-wrap::after{
+  content:""; position:absolute; inset:-10%; pointer-events:none;
+  background:radial-gradient(closest-side, rgba(17,177,255,.2), rgba(17,177,255,0) 70%);
+  filter:blur(18px); opacity:calc(.2 + .6*var(--logo-glow));
+}
+@keyframes pulse{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.015)}
 }
 
-/* Bar + messages */
 .progress{width:min(76vw,560px); height:10px; border-radius:999px; overflow:hidden;
   background:linear-gradient(180deg, rgba(12,18,30,.6), rgba(10,16,26,.4));
   border:1px solid rgba(120,170,240,.18); box-shadow:inset 0 0 1px rgba(255,255,255,.05), 0 6px 18px rgba(0,0,0,.25)}
@@ -124,17 +96,13 @@ body{
 .page-on .page{opacity:1; visibility:visible; transform:none}
 .wrap{max-width:1200px; width:100%; margin:0 auto; padding:26px 28px; flex:1}
 
-/* Header: logo left (masked, no rectangle), title/tagline centered */
+/* Header: logo left (no box), title/tagline centered */
 header{display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:16px; padding:12px 0 22px; border-bottom:1px solid var(--line)}
 .header-left{display:flex;align-items:center}
 .brand-logo{
-  width:112px; height:112px; position:relative;
-  -webkit-mask:url("assets/logo.png") center/contain no-repeat; mask:url("assets/logo.png") center/contain no-repeat;
-  background:
-    radial-gradient(96% 96% at 50% 50%, rgba(17,177,255,.95), rgba(17,177,255,0) 70%),
-    linear-gradient(180deg, #8cf6ff, #007cd6);
-  filter:drop-shadow(0 0 26px rgba(17,177,255,.55));
+  width:112px; height:112px; position:relative; display:inline-grid; place-items:center;
 }
+.brand-logo img{width:100%; height:auto; display:block; filter:drop-shadow(0 0 26px rgba(17,177,255,.55))}
 .brand-logo::after{ /* LED backlight */
   content:""; position:absolute; inset:-22%; pointer-events:none;
   background:radial-gradient(closest-side, rgba(17,177,255,.22), rgba(17,177,255,0) 70%);
@@ -169,8 +137,6 @@ ul{list-style:disc;margin-left:20px;margin-bottom:22px} li{margin-bottom:8px}
 .value{font-weight:800;color:#e8f2ff;font-size:1.02rem}
 .icon{width:16px;height:16px;display:inline-grid;place-items:center}
 .icon svg{width:16px;height:16px}
-.card::before{content:""; position:absolute; inset:-1px; border-radius:19px;background:linear-gradient(120deg, rgba(17,177,255,.35), rgba(110,231,255,.2), rgba(17,177,255,.35));filter:blur(16px); opacity:.35}
-.card::after{content:""; position:absolute; inset:1px; border-radius:17px; opacity:.10;background:linear-gradient(transparent 31px, rgba(255,255,255,.12) 32px),linear-gradient(90deg, transparent 31px, rgba(255,255,255,.12) 32px);background-size:32px 32px;mask:linear-gradient(180deg, #000 70%, transparent 100%)}
 a:any-link{color:#a8dfff}
 
 /* Footer */
@@ -201,15 +167,11 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
 <body>
   <div class="bg"></div><div class="grain"></div>
 
-  <!-- Rectangles (shown immediately) -->
-  <div class="veil shimmer" id="veil" aria-hidden="true"></div>
-
   <!-- Splash -->
   <div class="splash" id="splash" aria-hidden="true">
     <div class="stage">
-      <div class="logo-stack">
-        <div class="logo-shape" id="logo"></div>
-        <div class="logo-outline" aria-hidden="true"></div>
+      <div class="slogo-wrap">
+        <img class="slogo" id="slogo" src="assets/logo.png" alt="F1 Cash logo">
       </div>
       <div class="progress"><div class="bar" id="bar"></div></div>
       <div class="msg" id="msg">AUTHORIZING…</div>
@@ -224,7 +186,9 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   <div class="page">
     <div class="wrap">
       <header>
-        <div class="header-left"><div class="brand-logo" aria-label="F1 Cash logo"></div></div>
+        <div class="header-left">
+          <div class="brand-logo"><img src="assets/logo.png" alt="F1 Cash"></div>
+        </div>
         <div class="header-center">
           <h1>F1 CASH</h1>
           <p>Simple Business Funding</p>
@@ -291,58 +255,34 @@ footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, r
   var splash = document.getElementById('splash');
   var bar = document.getElementById('bar');
   var approved = document.getElementById('approved');
-  var veil = document.getElementById('veil');
-
-  // build veil tiles with stagger (visible immediately)
-  (function buildVeil(){
-    var cols = 22, rows = 12, frag = document.createDocumentFragment();
-    for (var r=0;r<rows;r++){
-      for (var c=0;c<cols;c++){
-        var t = document.createElement('div'); t.className='tile';
-        var dist = Math.hypot(c-cols/2, r-rows/2);
-        var delay = Math.round(dist*22 + (Math.random()*50));
-        t.style.setProperty('--d', delay+'ms');
-        frag.appendChild(t);
-      }
-    }
-    veil.appendChild(frag);
-  })();
-
-  function flipOutVeil(){
-    veil.querySelectorAll('.tile').forEach(function(t){ t.classList.add('flip'); });
-    setTimeout(function(){ veil.remove(); }, 1100);
-  }
 
   function fadeOutSplash(){
-    // no flicker: disable further transitions on bar, then fade whole splash
+    // stop the bar transition to prevent any flashback, then fade container
     bar.style.transition='none';
     splash.classList.add('is-fade');
     splash.addEventListener('transitionend', function onEnd(e){
-      if (e.propertyName === 'opacity'){
+      if (e.propertyName === 'opacity') {
         splash.removeEventListener('transitionend', onEnd);
         splash.classList.add('is-hide');
       }
     });
   }
-
   function revealPage(){
     document.body.classList.add('page-on');
   }
-
   function approveSequence(){
-    // show approved, finish bar to 100% smoothly, brighten logo & slightly enlarge
     approved.style.display='flex';
+    // finish bar smoothly and brighten/pop logo slightly
     bar.style.transition='width 1.1s ease';
     bar.style.width='100%';
     root.style.setProperty('--logo-bright','1');
     root.style.setProperty('--logo-glow','1');
-    root.style.setProperty('--logo-scale','1.03'); // tiny pop
-    // remove veil, then fade splash and reveal page
-    flipOutVeil();
-    setTimeout(function(){ fadeOutSplash(); revealPage(); }, 650);
+    root.style.setProperty('--logo-scale','1.03');
+    // fade out to page
+    setTimeout(function(){ fadeOutSplash(); revealPage(); }, 700);
   }
 
-  // progress to 85% steadily, then approve
+  // steady progress to 85%, then approve
   (function run(){
     var start = performance.now(), DURATION = 3400, APPROVE_AT = 0.85;
     function tick(now){
