--- a/index.html
+++ b/index.html
@@ -1,311 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>F1 Cash — Simple Business Funding</title>
-<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-<style>
-:root{
-  --bg-0:#04060b; --bg-1:#05070d; --bg-2:#0b1220;
-  --line:#18233a; --ink:#e6ecff; --muted:#95a7cf;
-  --accent:#11b1ff; --accent2:#6ee7ff; --success:#24ff90;
-
-  /* Splash controls (JS updates) */
-  --logo-bright:0;   /* 0..1 */
-  --logo-glow:0;     /* 0..1 */
-  --logo-scale:1;    /* scale pulse */
+/* --- Splash logo --- */
+.slogo-wrap {
+  position: relative;
+  display: inline-grid;
+  place-items: center;
 }
-*{box-sizing:border-box;margin:0;padding:0}
-html,body{height:100%}
-body{
-  color:var(--ink); background:var(--bg-0);
-  font-family:'Inter',system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;
-  -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
-  overflow-x:hidden;
-}
-
-/* Deep backdrop + grain (no banding) */
-.bg{
-  position:fixed; inset:-15% -15% -15% -15%; z-index:-2; pointer-events:none;
-  background:
-    radial-gradient(1400px 900px at 12% -8%, rgba(16,30,60,.72) 0%, rgba(9,14,26,.55) 45%, rgba(7,10,18,0) 80%),
-    radial-gradient(1100px 800px at 80% 10%, rgba(20,55,90,.55) 0%, rgba(10,18,36,.35) 50%, rgba(7,10,18,0) 85%),
-    radial-gradient(1200px 900px at 60% 85%, rgba(14,28,55,.40) 0%, rgba(9,14,27,.22) 55%, rgba(7,10,18,0) 92%),
-    linear-gradient(120deg, var(--bg-1), var(--bg-2));
-  filter:saturate(1.05);
-}
-.grain{
-  position:fixed; inset:0; z-index:-1; pointer-events:none; opacity:.2; mix-blend-mode:overlay;
-  background-image:
-    radial-gradient(1px 1px at 15% 12%, rgba(255,255,255,.035) 0, transparent 55%),
-    radial-gradient(1px 1px at 35% 78%, rgba(255,255,255,.03) 0, transparent 55%),
-    radial-gradient(1px 1px at 72% 32%, rgba(255,255,255,.032) 0, transparent 55%),
-    radial-gradient(1px 1px at 88% 64%, rgba(255,255,255,.028) 0, transparent 55%),
-    radial-gradient(1px 1px at 52% 52%, rgba(0,0,0,.035) 0, transparent 55%);
-}
-
-/* ===== CLEAN SPLASH (no rectangles) ===== */
-.splash{
-  position:fixed; inset:0; z-index:9999; display:grid; place-items:center;
-  opacity:1; visibility:visible; transition:opacity .6s ease, visibility .6s ease;
-}
-.splash.is-fade{opacity:0} .splash.is-hide{opacity:0; visibility:hidden}
-.stage{display:grid; place-items:center; gap:16px}
-
-/* Always-visible logo image with neon pulse & brighter outline at approval */
-.slogo{
-  width:min(54vw,380px); height:auto; transform:scale(var(--logo-scale));
+.slogo {
+  width: min(54vw, 380px);
+  height: auto;
+  transform: scale(var(--logo-scale));
+  mix-blend-mode: screen;        /* <-- FIXES black box */
+  background-color: transparent; /* ensure no background */
   filter:
     brightness(calc(.7 + .9*var(--logo-bright)))
     contrast(calc(1 + .3*var(--logo-bright)))
     saturate(calc(1 + .3*var(--logo-bright)))
     drop-shadow(0 0 calc(60px*var(--logo-glow)) rgba(17,177,255,.9));
-  animation:pulse 3.6s ease-in-out infinite;
+  animation: pulse 3.6s ease-in-out infinite;
 }
-/* thin outline around any image (no mask required) */
-.slogo-wrap{position:relative; display:inline-grid; place-items:center}
-.slogo-wrap::after{
-  content:""; position:absolute; inset:-10%; pointer-events:none;
-  background:radial-gradient(closest-side, rgba(17,177,255,.2), rgba(17,177,255,0) 70%);
-  filter:blur(18px); opacity:calc(.2 + .6*var(--logo-glow));
+.slogo-wrap::after {
+  content: "";
+  position: absolute;
+  inset: -10%;
+  pointer-events: none;
+  background: radial-gradient(closest-side, rgba(17,177,255,.2), rgba(17,177,255,0) 70%);
+  filter: blur(18px);
+  opacity: calc(.2 + .6 * var(--logo-glow));
+  mix-blend-mode: screen;        /* blend light only */
 }
-@keyframes pulse{
-  0%,100%{transform:scale(1)}
-  50%{transform:scale(1.015)}
+
+/* --- Header logo --- */
+.brand-logo img {
+  width: 100%;
+  height: auto;
+  display: block;
+  mix-blend-mode: screen;        /* <-- FIXES black box */
+  background-color: transparent;
+  filter: drop-shadow(0 0 26px rgba(17,177,255,.55));
 }
-
-.progress{width:min(76vw,560px); height:10px; border-radius:999px; overflow:hidden;
-  background:linear-gradient(180deg, rgba(12,18,30,.6), rgba(10,16,26,.4));
-  border:1px solid rgba(120,170,240,.18); box-shadow:inset 0 0 1px rgba(255,255,255,.05), 0 6px 18px rgba(0,0,0,.25)}
-.bar{width:0%; height:100%; background:linear-gradient(90deg, #00b7ff, #11b1ff, #6ee7ff);
-  box-shadow:0 0 18px rgba(17,177,255,.35); transition:width .28s ease}
-.msg{font-family:'Orbitron',sans-serif; letter-spacing:1.8px; text-transform:uppercase;
-  font-size:clamp(.8rem,.9rem,1rem); color:#a9cfff; text-align:center; margin-top:10px; opacity:.95}
-.approved{display:none; align-items:center; gap:10px; justify-content:center; margin-top:6px}
-.approved .text{font-family:'Orbitron',sans-serif; letter-spacing:2px; text-transform:uppercase;
-  color:var(--success); font-size:1rem; text-shadow:0 0 10px var(--success), 0 0 20px var(--success); animation:pop .42s cubic-bezier(.2,1.6,.2,1) both}
-.check{ width:22px; height:22px; border-radius:50%; background: radial-gradient(circle, #00ff95 0 60%, rgba(0,0,0,0) 61%); position:relative; box-shadow:0 0 12px rgba(36,255,144,.7); animation:pop .42s .02s both cubic-bezier(.2,1.6,.2,1) }
-.check::after{ content:""; position:absolute; left:6px; top:9px; width:8px; height:4px; border:2px solid #002b17; border-top:none; border-right:none; transform:rotate(-45deg) }
-@keyframes pop{0%{transform:scale(.7);opacity:0}70%{transform:scale(1.09);opacity:1}100%{transform:scale(1)}}
-
-/* ===== PAGE ===== */
-.page{min-height:100svh; display:flex; flex-direction:column; opacity:0; transform:translateY(8px); visibility:hidden; transition:opacity .6s ease, transform .6s ease}
-.page-on .page{opacity:1; visibility:visible; transform:none}
-.wrap{max-width:1200px; width:100%; margin:0 auto; padding:26px 28px; flex:1}
-
-/* Header: logo left (no box), title/tagline centered */
-header{display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:16px; padding:12px 0 22px; border-bottom:1px solid var(--line)}
-.header-left{display:flex;align-items:center}
-.brand-logo{
-  width:112px; height:112px; position:relative; display:inline-grid; place-items:center;
+.brand-logo::after {
+  content: "";
+  position: absolute;
+  inset: -22%;
+  pointer-events: none;
+  background: radial-gradient(closest-side, rgba(17,177,255,.22), rgba(17,177,255,0) 70%);
+  filter: blur(14px);
+  mix-blend-mode: screen;
 }
-.brand-logo img{width:100%; height:auto; display:block; filter:drop-shadow(0 0 26px rgba(17,177,255,.55))}
-.brand-logo::after{ /* LED backlight */
-  content:""; position:absolute; inset:-22%; pointer-events:none;
-  background:radial-gradient(closest-side, rgba(17,177,255,.22), rgba(17,177,255,0) 70%);
-  filter:blur(14px);
-}
-.header-center{text-align:center}
-.header-center h1{
-  font-family:'Orbitron',sans-serif;font-weight:800;font-size:42px;line-height:1;letter-spacing:.8px;
-  background:linear-gradient(90deg,var(--accent),#78d9ff); -webkit-background-clip:text; background-clip:text; color:transparent}
-.header-center p{color:#a9bce6;font-size:18px;margin-top:8px}
-.header-right{width:112px}
-
-/* Main */
-main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:36px;padding:28px 0}
-.content{flex:1 1 560px}
-h2{
-  font-family:'Orbitron',sans-serif; font-weight:800; font-size:46px; line-height:1.12; margin:0 0 12px; letter-spacing:.3px;
-  background:linear-gradient(90deg,var(--accent),#7dd3fc); -webkit-background-clip:text; background-clip:text; color:transparent;
-  filter:drop-shadow(0 6px 18px rgba(17,177,255,.12))}
-p{color:#b6c3da;line-height:1.6;margin-bottom:22px;font-size:1.05rem}
-ul{list-style:disc;margin-left:20px;margin-bottom:22px} li{margin-bottom:8px}
-.apply-btn{display:inline-block;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);cursor:not-allowed;opacity:.78;font-family:'Orbitron',sans-serif}
-.note{font-size:12.5px;color:var(--muted);margin-top:8px}
-
-/* Terms card */
-.card{--gd:rgba(20,30,55,.86); position:relative; flex:1 1 420px;
-  background:radial-gradient(180% 140% at 0% 0%, rgba(17,177,255,.08), transparent 60%), linear-gradient(180deg, var(--gd), rgba(13,18,32,.82));
-  border:1px solid rgba(120,170,240,.16); border-radius:18px; padding:18px 18px 16px; box-shadow:0 20px 46px rgba(0,0,0,.4), inset 0 0 1px rgba(255,255,255,.05)}
-.card h3{ color:#c9e7ff; font-size:1.12rem; margin:2px 0 10px; border-bottom:1px solid rgba(120,170,240,.18); padding-bottom:10px }
-.row{display:grid;grid-template-columns:150px 1fr;gap:8px 12px;align-items:center;margin:10px 0}
-.label{color:#9fb3da;font-size:15px;display:flex;align-items:center;gap:8px}
-.value{font-weight:800;color:#e8f2ff;font-size:1.02rem}
-.icon{width:16px;height:16px;display:inline-grid;place-items:center}
-.icon svg{width:16px;height:16px}
-a:any-link{color:#a8dfff}
-
-/* Footer */
-footer{ margin-top:auto; padding:18px 28px; background:linear-gradient(180deg, rgba(6,10,20,.55), rgba(6,10,20,.35)); backdrop-filter:saturate(130%) blur(6px); border-top:1px solid rgba(150,190,255,.12) }
-.footer-row{ display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:space-between; max-width:1200px; margin:0 auto }
-.dock{ display:flex; gap:10px; flex-wrap:wrap }
-.chip{ display:inline-flex; align-items:center; gap:8px; padding:6px 10px; border-radius:12px; background:linear-gradient(180deg, rgba(14,24,42,.35), rgba(10,16,28,.22)); border:1px solid rgba(120,170,240,.16); color:#cfe6ff; font-size:14px }
-.chip svg{width:16px;height:16px}
-.chip a{color:#cfe6ff; text-decoration:none}
-.chip a:hover{text-decoration:underline}
-
-/* Responsive */
-@media (max-width:960px){
-  .wrap{padding:16px}
-  .brand-logo{width:90px;height:90px}
-  .header-center h1{font-size:32px}
-  .header-center p{font-size:15.5px}
-  h2{font-size:36px}
-}
-@media (max-width:520px){
-  .header-center h1{font-size:28px}
-  .header-center p{font-size:15px}
-  .row{grid-template-columns:130px 1fr}
-  .value{font-size:1rem}
-}
-</style>
-</head>
-<body>
-  <div class="bg"></div><div class="grain"></div>
-
-  <!-- Splash -->
-  <div class="splash" id="splash" aria-hidden="true">
-    <div class="stage">
-      <div class="slogo-wrap">
-        <img class="slogo" id="slogo" src="assets/logo.png" alt="F1 Cash logo">
-      </div>
-      <div class="progress"><div class="bar" id="bar"></div></div>
-      <div class="msg" id="msg">AUTHORIZING…</div>
-      <div class="approved" id="approved">
-        <span class="check" aria-hidden="true"></span>
-        <span class="text">ACCESS APPROVED</span>
-      </div>
-    </div>
-  </div>
-
-  <!-- Page -->
-  <div class="page">
-    <div class="wrap">
-      <header>
-        <div class="header-left">
-          <div class="brand-logo"><img src="assets/logo.png" alt="F1 Cash"></div>
-        </div>
-        <div class="header-center">
-          <h1>F1 CASH</h1>
-          <p>Simple Business Funding</p>
-        </div>
-        <div class="header-right"></div>
-      </header>
-
-      <main>
-        <div class="content">
-          <h2>Fast working capital for small businesses</h2>
-          <p>Funding up to $1,000 with clear monthly payments and no collateral or hard credit pulls.</p>
-          <ul>
-            <li>Business owners with 12+ months in operation</li>
-            <li>Simple promissory note after verification</li>
-            <li>6 equal monthly installments</li>
-          </ul>
-          <a class="apply-btn" aria-disabled="true" title="Coming soon">APPLY NOW</a>
-          <p class="note">Button disabled for now — application link coming soon.</p>
-        </div>
-
-        <aside class="card" aria-label="At-a-glance terms">
-          <h3>At-a-glance terms</h3>
-          <div class="row"><span class="label">Typical advance</span><span class="value">$300 – $1,000</span></div>
-          <div class="row"><span class="label">Schedule</span><span class="value">6 monthly payments</span></div>
-          <div class="row">
-            <span class="label"><span class="icon" aria-hidden="true">
-              <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
-            </span> Support</span>
-            <span class="value"><a href="mailto:info@f1cash.net">info@f1cash.net</a></span>
-          </div>
-          <div class="row">
-            <span class="label"><span class="icon" aria-hidden="true">
-              <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
-            </span> Phone</span>
-            <span class="value"><a href="tel:+12294484389">+1 229-448-4389</a></span>
-          </div>
-        </aside>
-      </main>
-    </div>
-
-    <footer>
-      <div class="footer-row">
-        <div class="dock">
-          <span class="chip">
-            <svg viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7Z" stroke="#9ecaff" stroke-width="1.5"/><path d="M21 7l-9 6L3 7" stroke="#9ecaff" stroke-width="1.5"/></svg>
-            <a href="mailto:info@f1cash.net">info@f1cash.net</a>
-          </span>
-          <span class="chip">
-            <svg viewBox="0 0 24 24" fill="none"><path d="M6.6 10.8a15.5 15.5 0 0 0 6.6 6.6l2.2-2.2a1.5 1.5 0 0 1 1.5-.37l3.3 1.1a1.5 1.5 0 0 1 1 1.41V19a2 2 0 0 1-2.2 2A18 18 0 0 1 3 6.2 2 2 0 0 1 5 4h1.6a1.5 1.5 0 0 1 1.42 1l1.1 3.3c.17.47.05 1-.3 1.35L6.6 10.8Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
-            <a href="tel:+12294484389">+1 229-448-4389</a>
-          </span>
-        </div>
-        <span class="chip">
-          <svg viewBox="0 0 24 24" fill="none"><path d="M5 11a7 7 0 0 1 14 0v2h1a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-4a2 2 0 0 1 2-2h1v-2Z" stroke="#9ecaff" stroke-width="1.5"/></svg>
-          Secure · © 2025 F1 Cash
-        </span>
-      </div>
-    </footer>
-  </div>
-
-<script>
-(function(){
-  var root = document.documentElement;
-  var splash = document.getElementById('splash');
-  var bar = document.getElementById('bar');
-  var approved = document.getElementById('approved');
-
-  function fadeOutSplash(){
-    // stop the bar transition to prevent any flashback, then fade container
-    bar.style.transition='none';
-    splash.classList.add('is-fade');
-    splash.addEventListener('transitionend', function onEnd(e){
-      if (e.propertyName === 'opacity') {
-        splash.removeEventListener('transitionend', onEnd);
-        splash.classList.add('is-hide');
-      }
-    });
-  }
-  function revealPage(){
-    document.body.classList.add('page-on');
-  }
-  function approveSequence(){
-    approved.style.display='flex';
-    // finish bar smoothly and brighten/pop logo slightly
-    bar.style.transition='width 1.1s ease';
-    bar.style.width='100%';
-    root.style.setProperty('--logo-bright','1');
-    root.style.setProperty('--logo-glow','1');
-    root.style.setProperty('--logo-scale','1.03');
-    // fade out to page
-    setTimeout(function(){ fadeOutSplash(); revealPage(); }, 700);
-  }
-
-  // steady progress to 85%, then approve
-  (function run(){
-    var start = performance.now(), DURATION = 3400, APPROVE_AT = 0.85;
-    function tick(now){
-      var t = Math.min(1, (now - start) / DURATION);
-      bar.style.width = (Math.min(t,APPROVE_AT)*100).toFixed(1) + '%';
-      var glow = Math.pow(t, 0.75);
-      root.style.setProperty('--logo-bright', glow.toFixed(3));
-      root.style.setProperty('--logo-glow',   glow.toFixed(3));
-      if (t < APPROVE_AT){ requestAnimationFrame(tick); }
-      else { approveSequence(); }
-    }
-    requestAnimationFrame(tick);
-  })();
-
-  // optional skip
-  document.addEventListener('pointerdown', function once(){
-    approveSequence();
-    document.removeEventListener('pointerdown', once);
-  }, { once:true });
-
-  // failsafe
-  setTimeout(function(){ if (!document.body.classList.contains('page-on')) approveSequence(); }, 6500);
-})();
-</script>
-</body>
-</html>
