--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   --ink:#e6ecff; --muted:#95a7cf; --line:#18233a;
   --accent:#11b1ff; --accent2:#6ee7ff; --success:#24ff90;
 
-  /* splash runtime */
-  --logo-bright:0; --logo-glow:0; --logo-scale:1;
+  /* one true neon for the logo everywhere */
+  --logo-c1:#bdf6ff;   /* inner edge glow */
+  --logo-c2:#11b1ff;   /* core neon */
+  --logo-c3:#6ee7ff;   /* highlight */
+  --logo-size: min(56vw,380px);
 }
 
-/* ===== Reset / Base ===== */
 *{box-sizing:border-box;margin:0;padding:0}
 html,body{height:100%}
 body{
@@ -32,48 +34,40 @@ body{
   overflow-x:hidden;
 }
 
-/* ===== Splash (logo-only, no rectangles) ===== */
+/* ---------- Splash (logo only, constant color) ---------- */
 body.splash-lock{overflow:hidden}
 .splash{
   position:fixed; inset:0; z-index:10000; display:grid; place-items:center;
   opacity:1; visibility:visible; transition:opacity .7s ease, visibility .7s ease;
-  pointer-events:none; /* avoid accidental taps while loading */
+}
+.splash::before{ /* dimmer so content never peeks through; not around logo */
+  content:""; position:absolute; inset:0;
+  background:linear-gradient(120deg, rgba(5,7,13,.92), rgba(7,12,24,.92));
+  backdrop-filter:blur(1px) saturate(110%);
 }
 .splash.is-fade{opacity:0}
 .splash.is-hide{opacity:0; visibility:hidden}
 .stage{position:relative; z-index:1; display:grid; place-items:center; gap:16px; padding:24px}
 
-/* Full-screen dim so page never peeks through;
-   this is the ONLY backdrop (not around the logo). */
-.splash::before{
-  content:""; position:absolute; inset:0;
-  background:linear-gradient(120deg, rgba(5,7,13,.92), rgba(7,12,24,.92));
-  backdrop-filter:blur(1px) saturate(110%);
-}
-
-/* ---- LOGO: masked, so black pixels are cut away ---- */
-.logo-only{
-  width:min(56vw,380px); height:min(56vw,380px);
-  /* Fill color of the logo (can be gradient) */
+/* Masked neon logo (no blend, no brightness changes) */
+.logo-neon{
+  width:var(--logo-size); height:var(--logo-size); border-radius:22px;
+  /* Fixed neon fill (same on splash + header) */
   background:
-    linear-gradient(180deg, #ccf7ff, #10a5ff);
-  /* Use PNG luminance as mask -> no black rectangle ever */
+    radial-gradient(120% 120% at 50% 30%, var(--logo-c3) 0 12%, var(--logo-c2) 42%, var(--logo-c1) 85%),
+    linear-gradient(180deg, var(--logo-c1), var(--logo-c2));
   -webkit-mask:url("assets/logo.png") center/contain no-repeat;
           mask:url("assets/logo.png") center/contain no-repeat;
   -webkit-mask-mode:luminance; mask-mode:luminance;
-  border-radius:22px;               /* keeps PNG’s rounded feel if present */
-  transform:scale(var(--logo-scale));
-  /* Subtle neon without any surrounding box */
-  filter:
-    brightness(calc(.72 + .9*var(--logo-bright)))
-    contrast(calc(1 + .30*var(--logo-bright)))
-    saturate(calc(1 + .30*var(--logo-bright)))
-    drop-shadow(0 0 calc(48px*var(--logo-glow)) rgba(17,177,255,.85));
+  /* Constant glow (no color change over time) */
+  filter: drop-shadow(0 0 34px rgba(17,177,255,.75))
+          drop-shadow(0 0 10px rgba(17,177,255,.45));
+  /* Gentle pulse = scale only */
   animation:logoPulse 3.6s ease-in-out infinite;
 }
 @keyframes logoPulse{0%,100%{transform:scale(1)}50%{transform:scale(1.015)}}
 
-/* Progress + messages (kept minimal) */
+/* Progress + messages */
 .progress{width:min(76vw,560px); height:10px; border-radius:999px; overflow:hidden;
   background:rgba(255,255,255,.08); box-shadow:inset 0 0 1px rgba(255,255,255,.06)}
 .bar{height:100%; width:0%; background:linear-gradient(90deg,#00b7ff,#11b1ff,#6ee7ff);
@@ -83,23 +77,20 @@ body.splash-lock{overflow:hidden}
 .approved .text{font-family:'Orbitron',sans-serif; letter-spacing:2px; text-transform:uppercase; color:var(--success); text-shadow:0 0 10px var(--success),0 0 20px var(--success); animation:pop .42s cubic-bezier(.2,1.6,.2,1) both}
 .check{width:22px;height:22px;border-radius:50%;background:radial-gradient(circle,#00ff95 0 60%,transparent 61%);box-shadow:0 0 12px rgba(36,255,144,.7);position:relative;animation:pop .42s .02s both cubic-bezier(.2,1.6,.2,1)}
 .check::after{content:"";position:absolute;left:6px;top:9px;width:8px;height:4px;border:2px solid #002b17;border-top:none;border-right:none;transform:rotate(-45deg)}
-@keyframes pop{0%{transform:scale(.7);opacity:0}70%{transform:scale(1.1);opacity:1}100%{transform:scale(1)}}
+@keyframes pop{0%{transform:scale(.7);opacity:0}70%{transform:scale(1.1);opacity:1}100%{transform:scale(1)}
 
-/* ===== Page ===== */
+/* ---------- Page ---------- */
 .page{min-height:100svh; display:flex; flex-direction:column; opacity:0; transform:translateY(8px);
       visibility:hidden; transition:opacity .7s ease, transform .7s ease}
 .page-on .page{opacity:1; visibility:visible; transform:none}
 .wrap{max-width:1200px; margin:0 auto; padding:26px 20px; flex:1}
 
-/* Header (logo image only, no box) */
+/* Header uses the SAME masked neon logo for consistency */
 header{display:grid; grid-template-columns:auto 1fr auto; align-items:center; gap:16px; padding:12px 0 22px; border-bottom:1px solid var(--line)}
 .header-left{display:flex;align-items:center}
 .brand-logo{width:112px;height:112px;display:grid;place-items:center}
-.brand-logo img{
-  width:100%; height:auto; background:transparent;
-  mix-blend-mode:screen; border-radius:20px;
-  filter:drop-shadow(0 0 28px rgba(17,177,255,.55)) drop-shadow(0 0 8px rgba(17,177,255,.35));
-}
+.brand-logo .logo-neon{width:100%;height:100%;border-radius:20px;animation:none} /* no pulse in header */
+
 .header-center{text-align:center}
 .header-center h1{
   font-family:'Orbitron',sans-serif; font-weight:800; font-size:42px; line-height:1; letter-spacing:.8px;
@@ -107,7 +98,7 @@ header{display:grid; grid-template-columns:auto 1fr auto; align-items:center; ga
 .header-center p{color:#a9bce6;font-size:18px;margin-top:8px}
 .header-right{width:112px}
 
-/* Main content (unchanged) */
+/* Main area (unchanged) */
 main{display:flex;flex-wrap:wrap;justify-content:space-between;align-items:flex-start;gap:36px;padding:28px 0}
 .content{flex:1 1 560px}
 h2{font-family:'Orbitron',sans-serif;font-weight:800;font-size:46px;line-height:1.12;margin:0 0 12px;letter-spacing:.3px;
@@ -117,7 +108,7 @@ ul{list-style:disc;margin-left:20px;margin-bottom:22px} li{margin-bottom:8px}
 .apply-btn{display:inline-block;background:linear-gradient(90deg,#00b7ff,#007aff);color:#fff;padding:14px 34px;border-radius:12px;font-weight:800;letter-spacing:.6px;box-shadow:0 10px 26px rgba(17,177,255,.28);cursor:not-allowed;opacity:.78;font-family:'Orbitron',sans-serif}
 .note{font-size:12.5px;color:var(--muted);margin-top:8px}
 
-/* Terms card (kept) */
+/* Terms card */
 .card{
   --gd:rgba(20,30,55,.86);
   flex:1 1 420px; background:radial-gradient(180% 140% at 0% 0%, rgba(17,177,255,.08), transparent 60%), linear-gradient(180deg, var(--gd), rgba(13,18,32,.82));
@@ -157,10 +148,10 @@ footer{margin-top:auto; padding:18px 20px; background:linear-gradient(180deg, rg
 </style>
 </head>
 <body class="splash-lock">
-  <!-- ===== Splash (logo only) ===== -->
+  <!-- ===== Splash (logo only, constant neon) ===== -->
   <div class="splash" id="splash" aria-hidden="true">
     <div class="stage">
-      <div class="logo-only" id="slogo" aria-label="F1 Cash logo"></div>
+      <div class="logo-neon" id="slogo" aria-label="F1 Cash"></div>
       <div class="progress" aria-label="Loading"><div class="bar" id="bar"></div></div>
       <div class="msg" id="msg">AUTHORIZING…</div>
       <div class="approved" id="approved">
@@ -175,7 +166,8 @@ footer{margin-top:auto; padding:18px 20px; background:linear-gradient(180deg, rg
     <div class="wrap">
       <header>
         <div class="header-left">
-          <div class="brand-logo"><img src="assets/logo.png" alt="F1 Cash"></div>
+          <!-- Same masked neon as splash, so color never shifts -->
+          <div class="brand-logo"><div class="logo-neon" aria-hidden="true"></div></div>
         </div>
         <div class="header-center">
           <h1>F1 CASH</h1>
@@ -239,7 +231,6 @@ footer{margin-top:auto; padding:18px 20px; background:linear-gradient(180deg, rg
 
 <script>
 (function(){
-  const root = document.documentElement;
   const splash = document.getElementById('splash');
   const bar = document.getElementById('bar');
   const approved = document.getElementById('approved');
@@ -249,7 +240,6 @@ footer{margin-top:auto; padding:18px 20px; background:linear-gradient(180deg, rg
     document.body.classList.remove('splash-lock');
   }
   function fadeOutSplashThenReveal(){
-    // Fade the splash FIRST, then show the page to avoid that 0.3s layout flash
     splash.classList.add('is-fade');
     splash.addEventListener('transitionend', function onEnd(e){
       if (e.propertyName === 'opacity'){
@@ -262,23 +252,17 @@ footer{margin-top:auto; padding:18px 20px; background:linear-gradient(180deg, rg
   function approveSequence(){
     approved.style.display='flex';
     bar.style.transition='width 1.1s ease';
-    bar.style.width='100%';
-    root.style.setProperty('--logo-bright','1');
-    root.style.setProperty('--logo-glow','1');
-    root.style.setProperty('--logo-scale','1.03');
+    bar.style.width='100%';            // no color/brightness changes at approval
     setTimeout(fadeOutSplashThenReveal, 650);
   }
 
-  // steady progress to 85%, then approve
+  // Smooth progress to 85%, then approve
   (function run(){
     const start = performance.now();
     const DURATION = 3400, APPROVE_AT = 0.85;
     function tick(now){
       const t = Math.min(1, (now - start) / DURATION);
       bar.style.width = (Math.min(t,APPROVE_AT)*100).toFixed(1) + '%';
-      const glow = Math.pow(t, 0.75);
-      root.style.setProperty('--logo-bright', glow.toFixed(3));
-      root.style.setProperty('--logo-glow',   glow.toFixed(3));
       if (t < APPROVE_AT) requestAnimationFrame(tick);
       else approveSequence();
     }
